Cambios de titulos ReadMe

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
   </head>
   <body>
     <script src="main.js"></script>
-    PROBANDO MAMA-HIJA
+    <script src="../data/cohorts.json"></script>
+    
+    <button name="Prueba" id="btn" >Probar conexión</button>
   </body>
 </html>
