--- a/src/index.html
+++ b/src/index.html
@@ -1,27 +1,48 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Data Dashboard</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <script src="main.js"></script>
-    <script src="../data/cohorts.json"></script>
-    <header>
-      <div>
-        <!-- logo de laboradar -->
-        <img src="" alt="">
 
+<head>
+  <meta charset="utf-8">
+  <title>Data Dashboard</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
 
-      </div>
-      <div>
-        <!-- lisa de banderas -->
+<body>
+  <script src="main.js"></script>
+  <script src="../data/cohorts.json"></script>
+  <header>
+    <div>
+      <!-- logo de laboradar -->
+      <img src="../img/LogoLaboRadar.PNG" class="LaboRadar">
+      <p>Alejandra Ramirez</p>
+    </div>
+    <div>
+      <!-- lisa de banderas -->
+      <ul>
+        <li>
+          <img src="../img/peru.png" class="banderaPeru">
+          <p>Peru</p>
+        </li>
+        <li>
+          <img src="../img/brasil.png" class="banderaBrasil">
+          <p>Brasil</p>
+        </li>
+        <li>
+          <img src="../img/chile.png" class="banderaChile">
+        </li>
+        <li>
+          <img src="../img/mexico.png" class="banderaMexico">
+        </li>
+        <li>
+          <!-- <img src="../img/" alt=""> -->
+        </li>
+      </ul>
 
-      </div>
-      <div>
-        <!-- lista de busqueda e idioma -->
-      </div>
-    </header>
-  </body>
+    </div>
+    <div>
+      <!-- lista de busqueda e idioma -->
+    </div>
+  </header>
+</body>
+
 </html>
