guardando 3 carpetas faltantes

--- a/src/index.html
+++ b/src/index.html
@@ -9,39 +9,46 @@
 
 <body>
   <script src="main.js"></script>
-  <script src="../data/cohorts.json"></script>
+  <script src="data.js"></script>
   <header>
-    <div>
+    <figure>
       <!-- logo de laboradar -->
       <img src="../img/LogoLaboRadar.PNG" class="LaboRadar">
       <p>Alejandra Ramirez</p>
-    </div>
-    <div>
+    </figure>
+    <nav>
       <!-- lisa de banderas -->
       <ul>
         <li>
-          <img src="../img/peru.png" class="banderaPeru">
+          <img src="../img/peru.png" class="banderaPeru" id="banderaPeru">
           <p>Peru</p>
         </li>
-        <li>
-          <img src="../img/brasil.png" class="banderaBrasil">
+        <!-- <li>
+          <img src="../img/brasil.png" class="banderaBrasil" id="banderaBrasil">
           <p>Brasil</p>
         </li>
         <li>
-          <img src="../img/chile.png" class="banderaChile">
+          <img src="../img/chile.png" class="banderaChile" id="banderaChile" >
+          <p>Chile</p>
         </li>
         <li>
-          <img src="../img/mexico.png" class="banderaMexico">
+          <img src="../img/mexico.png" class="banderaMexico" id="banderaMexico">
+          <p>Mexico</p>
         </li>
         <li>
-          <!-- <img src="../img/" alt=""> -->
+          <img src="../img/general.PNG" class="iconoGeneral" id="iconoGeneral">
+          <p>General</p>
         </li>
       </ul>
-
-    </div>
+    </nav>
     <div>
       <!-- lista de busqueda e idioma -->
-    </div>
+      <ul>
+        <li>
+
+        </li>
+      </ul>
+    </div> -->
   </header>
 </body>
 
