--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -8,7 +8,11 @@
   <body>
     <script src="main.js"></script>
     <script src="../data/cohorts.json"></script>
+    <header>
+      <div>class="navWrapper" id="navWrapper"</div>
+    </header>
     
     <button name="Prueba" id="btn" >Probar conexión</button>
   </body>
-</html>
+</html> -->
+
