ya muestra en consola

--- a/src/index.html
+++ b/src/index.html
@@ -8,22 +8,24 @@
 </head>
 
 <body>
-  <script src="main.js"></script>
-  <script src="data.js"></script>
-  <header>
-    <figure>
-      <!-- logo de laboradar -->
+ <select name="cohorts" id="cohorts">
+
+
+ </select>
+  <!-- <header> -->
+    <!-- <figure> -->
+      <!-- logo de laboradar
       <img src="../img/LogoLaboRadar.PNG" class="LaboRadar">
       <p>Alejandra Ramirez</p>
     </figure>
     <nav>
       <!-- lisa de banderas -->
-      <ul>
+      <!-- <ul>
         <li>
           <img src="../img/peru.png" class="banderaPeru" id="banderaPeru">
           <p>Peru</p>
         </li>
-        <!-- <li>
+        <li>
           <img src="../img/brasil.png" class="banderaBrasil" id="banderaBrasil">
           <p>Brasil</p>
         </li>
@@ -41,15 +43,17 @@
         </li>
       </ul>
     </nav>
-    <div>
-      <!-- lista de busqueda e idioma -->
-      <ul>
+    <div> -->
+            <!-- lista de busqueda e idioma-->
+      <!-- <ul>
         <li>
 
         </li>
       </ul>
-    </div> -->
-  </header>
-</body>
+    </div>
+  </header> -->
+  <script src="main.js"></script>
+  <script src="data.js"></script> 
+</body> -->
 
 </html>
