ya esta el select de sedes

--- a/src/index.html
+++ b/src/index.html
@@ -8,52 +8,65 @@
 </head>
 
 <body>
- <select name="cohorts" id="cohorts">
-
-
- </select>
-  <!-- <header> -->
-    <!-- <figure> -->
-      <!-- logo de laboradar
+  <header>
+    <figure>
+      <!-- logo de laboradar -->
       <img src="../img/LogoLaboRadar.PNG" class="LaboRadar">
       <p>Alejandra Ramirez</p>
     </figure>
     <nav>
-      <!-- lisa de banderas -->
-      <!-- <ul>
-        <li>
-          <img src="../img/peru.png" class="banderaPeru" id="banderaPeru">
-          <p>Peru</p>
-        </li>
-        <li>
-          <img src="../img/brasil.png" class="banderaBrasil" id="banderaBrasil">
-          <p>Brasil</p>
-        </li>
-        <li>
-          <img src="../img/chile.png" class="banderaChile" id="banderaChile" >
-          <p>Chile</p>
-        </li>
-        <li>
-          <img src="../img/mexico.png" class="banderaMexico" id="banderaMexico">
-          <p>Mexico</p>
-        </li>
-        <li>
-          <img src="../img/general.PNG" class="iconoGeneral" id="iconoGeneral">
-          <p>General</p>
-        </li>
+      <!-- lista de banderas -->
+      <ul>
+        <li><img src="../img/peru.png" class="banderaPeru" id="banderaPeru"><p>Peru</p></li>
+        <li><img src="../img/brasil.png" class="banderaBrasil" id="banderaBrasil"><p>Brasil</p></li>
+        <li><img src="../img/chile.png" class="banderaChile" id="banderaChile"><p>Chile</p></li>
+        <li><img src="../img/mexico.png" class="banderaMexico" id="banderaMexico"><p>Mexico</p></li>
+        <li><img src="../img/general.PNG" class="iconoGeneral" id="iconoGeneral"><p>General</p></li>
       </ul>
-    </nav>
-    <div> -->
-            <!-- lista de busqueda e idioma-->
-      <!-- <ul>
-        <li>
-
-        </li>
-      </ul>
+      <div>
+        <ul>
+          <li><p> _____________🔍</p></li>
+          <li><p>Español ▼</p></li>
+        </ul>
+      </div>
+  </header>
+  <aside>
+      <p>
+        <!-- COHORT -->
+      </p>
+      <p>
+        Estudiantes
+      </p>
+      <p>
+        Reportes
+      </p>
+      <p>
+        Cursos
+      </p>
+      <p>
+        Lecturas, quizzes y ejercicios
+      </p>
+  </aside>
+  <main>
+    <div class = 'sedeSelectBox' id = sedeSelectBox>
+      <select name="selectSede" id="selectSede">
+        <option value="0">LIM</option>
+        <option value="1">AQP</option>
+        <option value="2">SCL</option>
+        <option value="3">GDL</option>
+        <option value="4">CDMX</option>
+        <option value="5">SPL</option>
+      </select>
     </div>
-  </header> -->
+    <div class ='cohortSelectBox' id = CohortSelectBox>
+      <select name="selectCohort" id="selectCohort">
+        <option>Selecciona un cohort</option>
+      </select>
+
+    </div>
+  </main>
   <script src="main.js"></script>
-  <script src="data.js"></script> 
-</body> -->
+  <script src="data.js"></script>
+</body>
 
 </html>
