casi esta el menu superior

--- a/src/index.html
+++ b/src/index.html
@@ -8,27 +8,23 @@
 </head>
 
 <body>
-  <header>
-    <figure>
+  <header class="header">
+    <div>
       <!-- logo de laboradar -->
-      <img src="../img/LogoLaboRadar.PNG" class="LaboRadar">
+      <img src="../img/LogoLaboRadar.PNG" class="LaboRadar"></img>
       <p>Alejandra Ramirez</p>
-    </figure>
-    <nav>
-      <!-- lista de banderas -->
+    </div>
+    <div>
       <ul>
-        <li><img src="../img/peru.png" class="banderaPeru" id="banderaPeru"><p>Peru</p></li>
-        <li><img src="../img/brasil.png" class="banderaBrasil" id="banderaBrasil"><p>Brasil</p></li>
-        <li><img src="../img/chile.png" class="banderaChile" id="banderaChile"><p>Chile</p></li>
-        <li><img src="../img/mexico.png" class="banderaMexico" id="banderaMexico"><p>Mexico</p></li>
-        <li><img src="../img/general.PNG" class="iconoGeneral" id="iconoGeneral"><p>General</p></li>
+        <li><a href="#">Peru</a></li>
+        <li><a href="#">Brasil</a></li>
+        <li><a href="#">Chile</a></li>
+        <li><a href="#">Mexico</a></li>
+        <li><a href="#">General</a></li>
+        <li><a href="#"> ____________</a></li>
+        <li><a href="#">Español ▼</a></li>
       </ul>
-      <div>
-        <ul>
-          <li><p> _____________🔍</p></li>
-          <li><p>Español ▼</p></li>
-        </ul>
-      </div>
+    </div>
   </header>
   <aside>
       <p>
