ya se pintan las estudiantes en pantalla

--- a/src/index.html
+++ b/src/index.html
@@ -46,12 +46,11 @@
           </select>
         </div>
     
+      <input id="inputName" >
       <select name="selectCohorts" id="selectCohorts"></select>
       <!-- <select name="selectUsers" id="selectUsers"></select> -->
       <select name="selectProgress" id="selectProgress"></select>
-      <table id = tableUsers>
-
-      </table>
+      <table id = tableUsers></table>
 
 
     
