el css ya tiene color

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
       <!-- <img src="../img/LogoLaboRadar.PNG" class="LaboRadar"></img> -->
       <section id="sidebar"> 
           <div class="white-label">
+            <img src="../img/LogoLaboRadar.PNG" alt="">
           </div> 
           <div id="sidebar-nav">   
             <ul>
@@ -44,7 +45,7 @@
                   </li>
                   <li class="nav-profile">
                     <div class="nav-profile-image">
-                      <img src="https://skynet.marketecture.com/user_avatars/258800/Hayley-Helsten.jpg" alt="profile-img" alt="profile image">
+                      
                       <div class="nav-profile-name">Jane Smith<i class="fa fa-caret-down"></i></div>
                     </div>
                   </li>
@@ -74,49 +75,11 @@
               </ul>
               <table id = tableUsers></table>
           </div>
-
-
           <div class="content">
             <div class="content-header">
               <h1>Dashboard</h1>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
-            <div class="widget-box sample-widget">
-              <div class="widget-header">
-                <h2>Widget Header</h2>
-                <i class="fa fa-cog"></i>
-              </div>
-              <div class="widget-content">
-                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/87118/sample-data-1.png">
-              </div>
-            </div>
-            <div class="widget-box sample-widget">
-              <div class="widget-header">
-                <h2>Widget Header</h2>
-                <i class="fa fa-cog"></i>
-              </div>
-              <div class="widget-content">
-                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/87118/sample-data-1.png">
-              </div>
-            </div>
-            <div class="widget-box sample-widget">
-              <div class="widget-header">
-                <h2>Widget Header</h2>
-                <i class="fa fa-cog"></i>
-              </div>
-              <div class="widget-content">
-                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/87118/sample-data-1.png">
-              </div>
-            </div>
-              <div class="widget-box sample-widget">
-              <div class="widget-header">
-                <h2>Widget Header</h2>
-                <i class="fa fa-cog"></i>
-              </div>
-              <div class="widget-content">
-                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/87118/sample-data-1.png">
-              </div>
-            </div>  
           </div>
         </section>
   <script src="main.js"></script>
