El main.js ya tiene al objeto options, ya filtra por sede y si se elige la sede ya PODRIA pintar alumnas

--- a/src/index.html
+++ b/src/index.html
@@ -67,8 +67,9 @@
                   </select>
                 </div>
           
-            <select name="selectCohorts" id="selectCohorts"></select>
+            <select name="selectCohorts" id="selectCohorts">
              <option value="" disabled selected>Seleccione un Cohort</option>
+            </select>
             <input id="inputName" >
               <ul id = "listaAlumnaBuscada">
                     <li></li>
