La función 1 esta a un 20%

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
                   <li class="nav-profile">
                     <div class="nav-profile-image">
                       
-                      <div class="nav-profile-name">Jane Smith<i class="fa fa-caret-down"></i></div>
+                      <div class="nav-profile-name">Alejandra Ramirez<i class="fa fa-caret-down"></i></div>
                     </div>
                   </li>
                 </ul>
@@ -74,7 +74,7 @@
               <ul id = "listaAlumnaBuscada">
                     <li></li>
               </ul>
-              <table id = tableUsers></table>
+              <table id = "tableUsers"></table>
           </div>
           <div class="content">
             <div class="content-header">
