Codigo mas limpio, la funcion de filter funciona correctamente, pero no muestra las notas

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
       <div id="Filtros" class="d-flex">
         <div id="buscador" class="w-50 text-center">
           <p class="mb-2">Alumnas: </p>
-          <input type="text" placeholder="Buscar nombre" id="searchButton">
+          <input type="text" placeholder="Buscar nombre" id="searchBox">
           <ul id="listaAlumnaBuscada">
             <li></li>
           </ul>
