--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div>
-    <select value="hola" id="selectSede">
+    <select id="selectSede">
       <option value="" disabled selected>Seleccione una Sede</option>
       <option value="lim" id="lim">LIM</option>
       <option value="aqp" id="aqp">AQP</option>
@@ -26,19 +26,10 @@
 
 
 
-  <div id="tabla" >
-    <div class="contain2 pb-3">
-      <div id="Filtros" class="d-flex">
-        <div id="buscador" class="w-50 text-center">
-          <p class="mb-2">Alumnas: </p>
+  
           <input type="text" placeholder="Buscar nombre" id="searchBox">
-          <ul id="listaAlumnaBuscada">
-            <li></li>
-          </ul>
-        </div>
-        </div>
-        <section id="filtOrder" class="w-50 text-center">
-            <p class="mb-2">Filtros: </p>
+         
+           
           <select id="OrderBy">
             <option value="-">Ordenar Por ...</option>
             <option value="name">Nombre</option>
@@ -52,6 +43,43 @@
             <option value="Ascendente">Ascendente</option>
             <option value="Descendente">Descendente</option>
           </select>
+
+          <!-- DIV QUE CONTIENE A LA TABLA DE ESTUDIANTES -->
+          <div class="table-responsive" >
+          <table class="table" id = 'tableEstudiante'>
+            <thead>
+              <tr>
+                <th scope="col">Estudiante</th>
+                <th scope="col">Completitud Total</th>
+                <th scope="col">Ejercicios Completados</th>
+                <th scope="col">Quizzes Completados</th>
+                <th scope="col">Puntuación de Quizzes</th>
+                <th scope="col">Lecturas Completadas</th>
+              </tr>
+            </thead>
+            <!-- <tbody>
+              <tr>
+                <th scope="row">1</th>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td>@mdo</td>
+              </tr>
+              <tr>
+                <th scope="row">2</th>
+                <td>Jacob</td>
+                <td>Thornton</td>
+                <td>@fat</td>
+              </tr>
+              <tr>
+                <th scope="row">3</th>
+                <td>Larry</td>
+                <td>the Bird</td>
+                <td>@twitter</td>
+              </tr>
+            </tbody> -->
+          </table>
+        </div >
+
         </section>
       </div>
     </div>
