ya pinta las estudiantes buscadas con sus notas, pero sin el encabezado

--- a/src/index.html
+++ b/src/index.html
@@ -48,17 +48,13 @@
     <div class='table-responsive'  >
       <table class='table' id='studentsAll'>
         <th scope='col'>Estudiante</th>
-        <th scope='col'>Completitud Total</th>
+        <th scope='col'>Completitud Total % </th>
         <th scope='col'>Ejercicios Completados</th>
         <th scope='col'>Quizzes Completados</th>
         <th scope='col'>Puntuación de Quizzes</th>
         <th scope='col'>Lecturas Completadas</th>
       </table>
-      <div id='showEstudents'>
-        <div class='usersCss' id='studentsAll'></div>
-      </div>
     </div>
-
     </section>
   </div>
   </div>
