--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,12 @@
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B"
     crossorigin="anonymous">
-  <link rel="../img/general.PNG" href="../img/general.PNG">
-</head>
+    <link rel="shortcut icon" type="image/png" href="../img/iconoRosa.png">
+ </head>
 
 <body>
   <header>
-    <img class="user" src=https://files.slack.com/files-pri/T0NNB6T0R-FBT24E0H1/alejandra_foto.jpg alt="Foto de perfil">
+    <img class="user" src="https://files.slack.com/files-pri/T0NNB6T0R-FBT24E0H1/alejandra_foto.jpg" alt="Foto de perfil">
     <h1 class = "nameUser">Alejandra Ramirez</h1>
     <nav class = "navigation" >
       <select id="selectSede">
